--- a/Questionnaire/Questionnaire.csproj
+++ b/Questionnaire/Questionnaire.csproj
@@ -72,6 +72,7 @@
     <Content Include="Backadmin\Allquestionnaires.aspx" />
     <Content Include="Backadmin\Oftenusequest.aspx" />
     <Content Include="FrontDesk\Index.aspx" />
+    <Content Include="FrontDesk\QuestionListConfirm.aspx" />
     <Content Include="FrontDesk\QuestionList.aspx" />
     <Content Include="Global.asax" />
     <Content Include="JS\bootstrap.min.js" />
@@ -129,6 +130,13 @@
     </Compile>
     <Compile Include="FrontDesk\Index.aspx.designer.cs">
       <DependentUpon>Index.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="FrontDesk\QuestionListConfirm.aspx.cs">
+      <DependentUpon>QuestionListConfirm.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="FrontDesk\QuestionListConfirm.aspx.designer.cs">
+      <DependentUpon>QuestionListConfirm.aspx</DependentUpon>
     </Compile>
     <Compile Include="FrontDesk\QuestionList.aspx.cs">
       <DependentUpon>QuestionList.aspx</DependentUpon>
