--- a/QuestionModels/QuestionModels.csproj
+++ b/QuestionModels/QuestionModels.csproj
@@ -43,7 +43,7 @@
   <ItemGroup>
     <Compile Include="AccountInfoModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuestionDetail2Model.cs" />
+    <Compile Include="QuestionAnswer.cs" />
     <Compile Include="QuestionDetailModel.cs" />
     <Compile Include="QuestionModel.cs" />
   </ItemGroup>
